penalty isNew and law proposal type
