# backend/docs/swagger.json
@@ -18,6 +18,17 @@
                 ],
                 "summary": "Add penalty to team member",
                 "operationId": "addUser",
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.AddPenaltyRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -211,6 +222,9 @@
         }
     },
     "definitions": {
+        "handlers.AddPenaltyRequest": {
+            "type": "object"
+        },
         "handlers.CreateLawRequest": {
             "type": "object"
         },
@@ -272,6 +286,9 @@
             "properties": {
                 "id": {
                     "type": "string"
+                },
+                "isNew": {
+                    "type": "boolean"
                 },
                 "law": {
                     "$ref": "#/definitions/models.Law"
